recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:11: error: recursive method spiral needs result type
	spiral(steps,angle,length,increment)=spiral(steps-1,angle,length+3,increment)
        ^